--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="license_android"
+        android:label="license"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
         <activity
